--- a/ThreeDApp2/ThreeDApp2.csproj
+++ b/ThreeDApp2/ThreeDApp2.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithm.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,11 +55,16 @@
     </Compile>
     <Compile Include="HSV.cs" />
     <Compile Include="MyPolygon.cs" />
+    <Compile Include="PathSLink.cs" />
+    <Compile Include="PathSNode.cs" />
     <Compile Include="Point3D.cs" />
     <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeScreenPoints.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
