added point in polygon

--- a/ThreeDApp2/ThreeDApp2.csproj
+++ b/ThreeDApp2/ThreeDApp2.csproj
@@ -59,6 +59,7 @@
     <Compile Include="PathSNode.cs" />
     <Compile Include="Point3D.cs" />
     <Compile Include="Polygon.cs" />
+    <Compile Include="Polygon2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeScreenPoints.cs" />
