--- a/ThreeDApp2/ThreeDApp2.csproj
+++ b/ThreeDApp2/ThreeDApp2.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPolygonAction.cs" />
     <Compile Include="Algorithm.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -54,6 +56,8 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HSV.cs" />
+    <Compile Include="IAction.cs" />
+    <Compile Include="MyList.cs" />
     <Compile Include="MyPolygon.cs" />
     <Compile Include="PathSLink.cs" />
     <Compile Include="PathSNode.cs" />
